# shadow

./: .gitignore  .travis.yml  AUTHORS.md  COPYING  Cargo.toml  ChangeLog  Makefile.am  Makefile.in  Makefile.rust  NEWS  README  README.md  SECURITY.md  STABLE.md  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  config.sub  configure  configure.ac  configure.in  ltconfig  ltmain.sh  mkinstalldirs  shadow-utils.spec.in  shadow.spec.in  stacker.yaml
current/doc/: CHANGES  LSM  Makefile.am  README  README.debian  README.limits  README.nls  README.pam  README.platforms  README.shadow-paper  README.sun4  cracklib26.diff
current/lib/: Makefile.am  commonio.h  defines.h  dialchk.c  dialup.c  faillog.h  fputsx.c  getdef.h  grdbm.c  gsdbm.c  gshadow.c  gshadow_.h  lockpw.c  md5.c  pam_defs.h  port.c  prototypes.h  putpwent.c  pwdbm.c  pwio.c  rad64.c  rcsid.h  sgetgrent.c  sgetpwent.c  sgroupio.c  sgroupio.h  shadow.c  shadow_.h  shadowio.c  snprintf.c  strcasecmp.c  strdup.c  strerror.c  strstr.c  utent.c
doc/: ANNOUNCE  CHANGES  HOWTO  LICENSE  LSM  Makefile.am  Makefile.in  README  README.limits  README.linux  README.mirrors  README.pam  README.platforms  README.skey  WISHLIST  console.c.spec.txt
doc/contributions/: ai.txt  build_install.md  ci.md  coding_style.md  introduction.md  license.md  releases.md  tests.md  translation.md
etc/: Makefile.am  Makefile.in  limits  login.access  login.defs  login.defs.hurd  login.defs.linux  shells  useradd
etc/pam.d/: Makefile.am  Makefile.in  chage  chpasswd  groupadd  groupdel  groupmod  login  newusers  passwd  shadow  su  useradd  usermod
etc/shadow-maint/: Makefile.am
lib/: .indent.pro  Makefile.am  Makefile.in  addgrps.c  adds.c  adds.h  age.c  agetpass.c  agetpass.h  alloc.c  alloc.h  attr.h  audit_help.c  basename.c  bit.c  bit.h  btrfs.c  btrfs.h  cast.h  chkhash.c  chkhash.h  chkname.c  chkname.h  chowndir.c  chowntty.c  cleanup.c  cleanup_group.c  cleanup_user.c  commonio.c  commonio.h  console.c  copydir.c  csrand.c  date.c  date.h  date_to_str.c  defines.h  dialchk.c  dialchk.h  dialup.h  (+163 more)
lib/alloc/: calloc.c  calloc.h  malloc.c  malloc.h  realloc.c  realloc.h  reallocf.c  reallocf.h
lib/atoi/: a2i.c  a2i.h  getlong.c  getlong.h  getnum.c  getnum.h  getulong.c  str2i.c  str2i.h  strtoi.c  strtoi.h  strton.c  strton.h  strtou_noneg.c  strtou_noneg.h
lib/ctype/: ispfchar.c  ispfchar.h
lib/io/: README  fprintf.c  fprintf.h  syslog.c  syslog.h
lib/pass/: agetpass.c  agetpass.h
lib/string/: README  sprintf.c  sprintf.h  stpecpy.c  stpecpy.h  stpeprintf.c  stpeprintf.h  strerrno.c  strerrno.h  strftime.c  strftime.h  strtcpy.c  strtcpy.h  ustr2stp.c  ustr2stp.h  zustr2stp.c  zustr2stp.h
lib/time/: date.c  date.h  day_to_str.c  day_to_str.h
lib/utmp/: wtmp.c  wtmp.h
libmisc/: Makefile.am  Makefile.in  addgrps.c  age.c  agetpass.c  alloc.c  audit_help.c  basename.c  bit.c  btrfs.c  chkname.c  chkname.h  chkshell.c  chowndir.c  chowntty.c  cleanup.c  cleanup_group.c  cleanup_user.c  console.c  copydir.c  csrand.c  date_to_str.c  entry.c  env.c  failure.c  failure.h  fields.c  find_new_gid.c  find_new_ids.c  find_new_sub_gids.c  find_new_sub_uids.c  find_new_uid.c  freezero.h  get_gid.c  getdate.c  getdate.h  getdate.y  getgr_nam_gid.c  getlong.c  getrange.c  (+59 more)
libsubid/: Makefile.am  api.c  api.h  subid.h  subid.h.in
man/: .gitignore  Makefile.am  Makefile.in  README.md  chage.1  chage.1.xml  chfn.1  chfn.1.xml  chgpasswd.8  chgpasswd.8.xml  chpasswd.8  chpasswd.8.xml  chsh.1  chsh.1.xml  config.xml.in  dialups.5  dpasswd.8  expiry.1  expiry.1.xml  faillog.5  faillog.5.xml  faillog.8  faillog.8.xml  generate_mans.deps  generate_mans.mak  generate_translations.mak  getsubids.1.xml  gpasswd.1  gpasswd.1.xml  groupadd.8  groupadd.8.xml  groupdel.8  groupdel.8.xml  groupmems.8  groupmems.8.xml  groupmod.8  groupmod.8.xml  groups.1  groups.1.xml  grpck.8  (+67 more)
man/cs/: Makefile.am  Makefile.in  groupdel.8  groupmems.8  groupmod.8  groups.1  grpck.8  gshadow.5  id.1  lastlog.8  nologin.8  passwd.5  shadow.5  su.1  vipw.8
man/da/: Makefile.am
man/de/: Makefile.am  Makefile.in  chfn.1  chsh.1  de.po  groups.1  login.1  newgrp.1  passwd.1  passwd.5  su.1  vipw.8
man/es/: Makefile.am  Makefile.in  login.1  newgrp.1  passwd.1  passwd.5  su.1  vipw.8
man/fi/: Makefile.am  Makefile.in  chfn.1  chsh.1  passwd.1  su.1
man/fr/: Makefile.am  Makefile.in  chage.1  chfn.1  chpasswd.8  chsh.1  expiry.1  faillog.5  faillog.8  fr.po  getspnam.3  gpasswd.1  groupadd.8  groupdel.8  groupmod.8  groups.1  grpck.8  gshadow.5  id.1  lastlog.8  limits.5  login.1  login.access.5  login.defs.5  logoutd.8  newgrp.1  newusers.8  passwd.1  passwd.5  porttime.5  pwck.8  pwconv.8  sg.1  shadow.3  shadow.5  su.1  suauth.5  useradd.8  userdel.8  usermod.8  (+1 more)
man/hu/: Makefile.am  Makefile.in  chfn.1  chsh.1  gpasswd.1  groups.1  id.1  lastlog.8  login.1  newgrp.1  passwd.1  passwd.5  sg.1  su.1
man/id/: Makefile.am  Makefile.in  chsh.1  login.1  useradd.8
man/it/: Makefile.am  Makefile.in  adduser.8  chage.1  chfn.1  chpasswd.8  chsh.1  expiry.1  faillog.5  faillog.8  getspnam.3  gpasswd.1  groupadd.8  groupdel.8  groupmod.8  groups.1  grpck.8  grpconv.8  (+21 more)
old/: Makefile.am  Makefile.in  Makefile.linux  Makefile.sun4  Makefile.svr4  Makefile.xenix  config.h.linux  config.h.sun4  config.h.svr4  config.h.xenix  orig-config.h  pwconv-old.8  pwconv-old.c  pwconv.8  pwd.h.m4  pwunconv-old.8  pwunconv-old.c  pwunconv.8  scologin.c  vipw.8
redhat/: Makefile.am  Makefile.in  shadow-970616.login.defs  shadow-utils.spec  shadow-utils.spec.in
src/: .gitignore  Makefile.am  Makefile.in  chage.c  check_subid_range.c  chfn.c  chgpasswd.c  chpasswd.c  chsh.c  chsh_chkshell.c  dpasswd.c  expiry.c  faillog.c  free_subid_range.c  get_subid_owners.c  getsubids.c  gpasswd.c  groupadd.c  groupdel.c  groupmems.c  groupmod.c  groups  groups.c  grpck.c  grpconv.c  grpunconv.c  id  id.c  lastlog.c  list_subid_ranges.c  login.c  login_nopam.c  logoutd.c  mkpasswd.c  new_subid_range.c  newgidmap.c  newgrp.c  newuidmap.c  newusers.c  nologin.c  (+11 more)
(+3839 files in other folders)
